# plover-steno-engine-hooks-logger

./: .pylintrc  README.md  justfile  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
plover_steno_engine_hooks_logger/: extension.py  gui_tool.py  hooks.py  hooks_logger.py  tool.py
plover_steno_engine_hooks_logger/steno_engine_hooks/: gui_tool.py  logger.py
