[metadata]
author = Paul Fioravanti
author_email = paul@paulfioravanti.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
description = Logs params given to Plover steno engine hooks
keywords = plover plover_plugin
license = GNU General Public License v3 or later (GPLv3+)
long_description = file: README.md
long_description_content_type = text/markdown
name = plover_steno_engine_hooks_logger
url = https://github.com/paulfioravanti/plover-steno-engine-hooks-logger
version = 0.1.0

[options]
install_requires =
    plover>=4.0.0.dev12
setup_requires =
    setuptools>=30.3.0
zip_safe = True
packages =
    plover_steno_engine_hooks_logger

[options.entry_points]
plover.extension =
    plover_steno_engine_hooks_logger = plover_steno_engine_hooks_logger.extension:StenoEngineHooksLogger
